// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FileProperties components/core/ProfileListSearch With default options 1`] = `
<div>
  <div>
    <div
      style={
        Object {
          "WebkitFontSmoothing": "antialiased",
          "backgroundColor": "#fff",
          "border": "1px solid #eee",
          "borderRadius": "2px",
          "color": "#444",
          "fontFamily": "-apple-system, \\".SFNSText-Regular\\", \\"San Francisco\\", BlinkMacSystemFont, \\"Segoe UI\\", \\"Roboto\\", \\"Oxygen\\", \\"Ubuntu\\", \\"Cantarell\\", \\"Fira Sans\\", \\"Droid Sans\\", \\"Helvetica Neue\\", \\"Lucida Grande\\", \\"Arial\\", sans-serif",
          "fontSize": "15px",
          "fontWeight": 300,
          "lineHeight": 1.45,
          "marginBottom": "20px",
          "marginTop": "20px",
          "padding": "20px 40px 40px",
        }
      }
    >
      <div
        style={
          Object {
            "borderBottom": "1px solid #eee",
            "marginBottom": 10,
            "paddingTop": 10,
          }
        }
      >
        <h1
          style={
            Object {
              "fontSize": "35px",
              "margin": 0,
              "padding": 0,
            }
          }
        >
          components/core/ProfileListSearch
        </h1>
        <h2
          style={
            Object {
              "fontSize": "22px",
              "fontWeight": 400,
              "margin": "0 0 10px 0",
              "padding": 0,
            }
          }
        >
          With default options
        </h2>
      </div>
    </div>
  </div>
  <div
    id="story-root"
    style={Object {}}
  >
    <div>
      <div
        className="input-group"
      >
        <input
          className="form-control"
          onChange={[Function]}
          placeholder="en_CA: Search for a new supervisor"
          type="text"
          value=""
        />
        <div
          className="input-group-append"
        >
          <span
            className="input-group-text"
          >
            SearchIcon
          </span>
        </div>
      </div>
      <ul
        className="list-group"
      />
    </div>
  </div>
  <div>
    <div
      style={
        Object {
          "WebkitFontSmoothing": "antialiased",
          "backgroundColor": "#fff",
          "border": "1px solid #eee",
          "borderRadius": "2px",
          "color": "#444",
          "fontFamily": "-apple-system, \\".SFNSText-Regular\\", \\"San Francisco\\", BlinkMacSystemFont, \\"Segoe UI\\", \\"Roboto\\", \\"Oxygen\\", \\"Ubuntu\\", \\"Cantarell\\", \\"Fira Sans\\", \\"Droid Sans\\", \\"Helvetica Neue\\", \\"Lucida Grande\\", \\"Arial\\", sans-serif",
          "fontSize": "15px",
          "fontWeight": 300,
          "lineHeight": 1.45,
          "marginBottom": "20px",
          "marginTop": "20px",
          "padding": "20px 40px 40px",
        }
      }
    >
      <div
        style={
          Object {
            "marginBottom": 0,
          }
        }
      >
        <div
          style={
            Object {
              "WebkitFontSmoothing": "antialiased",
              "color": "#444",
              "fontFamily": "-apple-system, \\".SFNSText-Regular\\", \\"San Francisco\\", BlinkMacSystemFont, \\"Segoe UI\\", \\"Roboto\\", \\"Oxygen\\", \\"Ubuntu\\", \\"Cantarell\\", \\"Fira Sans\\", \\"Droid Sans\\", \\"Helvetica Neue\\", \\"Lucida Grande\\", \\"Arial\\", sans-serif",
              "fontSize": "15px",
            }
          }
        >
          Search for “tes” to test
        </div>
      </div>
      <div>
        <h1
          style={
            Object {
              "borderBottom": "1px solid #EEE",
              "fontSize": "25px",
              "margin": "20px 0 0 0",
              "padding": "0 0 5px 0",
            }
          }
        >
          Prop Types
        </h1>
        <div>
          <h2
            style={
              Object {
                "margin": "20px 0 0 0",
              }
            }
          >
            "
            ProfileListSearch
            " Component
          </h2>
          <table>
            <thead>
              <tr>
                <th
                  style={
                    Object {
                      "textAlign": "left",
                      "verticalAlign": "top",
                    }
                  }
                >
                  property
                </th>
                <th
                  style={
                    Object {
                      "textAlign": "left",
                      "verticalAlign": "top",
                    }
                  }
                >
                  propType
                </th>
                <th
                  style={
                    Object {
                      "textAlign": "left",
                      "verticalAlign": "top",
                    }
                  }
                >
                  required
                </th>
                <th
                  style={
                    Object {
                      "textAlign": "left",
                      "verticalAlign": "top",
                    }
                  }
                >
                  default
                </th>
                <th
                  style={
                    Object {
                      "textAlign": "left",
                      "verticalAlign": "top",
                    }
                  }
                >
                  description
                </th>
              </tr>
            </thead>
            <tbody>
              <tr>
                <td
                  style={
                    Object {
                      "paddingRight": 10,
                      "verticalAlign": "top",
                    }
                  }
                >
                  onChange
                </td>
                <td
                  style={
                    Object {
                      "paddingRight": 10,
                      "verticalAlign": "top",
                    }
                  }
                >
                  <span />
                </td>
                <td
                  style={
                    Object {
                      "paddingRight": 10,
                      "verticalAlign": "top",
                    }
                  }
                >
                  -
                </td>
                <td
                  style={
                    Object {
                      "paddingRight": 10,
                      "verticalAlign": "top",
                    }
                  }
                >
                  <span
                    style={
                      Object {
                        "color": "#170",
                      }
                    }
                  >
                    onChange
                  </span>
                </td>
                <td
                  style={
                    Object {
                      "paddingRight": 10,
                      "verticalAlign": "top",
                    }
                  }
                />
              </tr>
              <tr>
                <td
                  style={
                    Object {
                      "paddingRight": 10,
                      "verticalAlign": "top",
                    }
                  }
                >
                  initialSearch
                </td>
                <td
                  style={
                    Object {
                      "paddingRight": 10,
                      "verticalAlign": "top",
                    }
                  }
                >
                  <span />
                </td>
                <td
                  style={
                    Object {
                      "paddingRight": 10,
                      "verticalAlign": "top",
                    }
                  }
                >
                  -
                </td>
                <td
                  style={
                    Object {
                      "paddingRight": 10,
                      "verticalAlign": "top",
                    }
                  }
                >
                  <span
                    style={
                      Object {
                        "color": "#22a",
                        "wordBreak": "break-word",
                      }
                    }
                  >
                    
                  </span>
                </td>
                <td
                  style={
                    Object {
                      "paddingRight": 10,
                      "verticalAlign": "top",
                    }
                  }
                />
              </tr>
            </tbody>
          </table>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`FileProperties components/core/ProfileListSearch With initial search 1`] = `
<div>
  <div>
    <div
      style={
        Object {
          "WebkitFontSmoothing": "antialiased",
          "backgroundColor": "#fff",
          "border": "1px solid #eee",
          "borderRadius": "2px",
          "color": "#444",
          "fontFamily": "-apple-system, \\".SFNSText-Regular\\", \\"San Francisco\\", BlinkMacSystemFont, \\"Segoe UI\\", \\"Roboto\\", \\"Oxygen\\", \\"Ubuntu\\", \\"Cantarell\\", \\"Fira Sans\\", \\"Droid Sans\\", \\"Helvetica Neue\\", \\"Lucida Grande\\", \\"Arial\\", sans-serif",
          "fontSize": "15px",
          "fontWeight": 300,
          "lineHeight": 1.45,
          "marginBottom": "20px",
          "marginTop": "20px",
          "padding": "20px 40px 40px",
        }
      }
    >
      <div
        style={
          Object {
            "borderBottom": "1px solid #eee",
            "marginBottom": 10,
            "paddingTop": 10,
          }
        }
      >
        <h1
          style={
            Object {
              "fontSize": "35px",
              "margin": 0,
              "padding": 0,
            }
          }
        >
          components/core/ProfileListSearch
        </h1>
        <h2
          style={
            Object {
              "fontSize": "22px",
              "fontWeight": 400,
              "margin": "0 0 10px 0",
              "padding": 0,
            }
          }
        >
          With initial search
        </h2>
      </div>
    </div>
  </div>
  <div
    id="story-root"
    style={Object {}}
  >
    <div>
      <div
        className="input-group"
      >
        <input
          className="form-control"
          onChange={[Function]}
          placeholder="en_CA: Search for a new supervisor"
          type="text"
          value="tes"
        />
        <div
          className="input-group-append"
        >
          <span
            className="input-group-text"
          >
            SearchIcon
          </span>
        </div>
      </div>
      <ul
        className="list-group"
      >
        <div
          className="spinner-border text-primary"
          role="status"
        >
          <span
            className="sr-only"
          >
            Loading...
          </span>
        </div>
      </ul>
    </div>
  </div>
  <div>
    <div
      style={
        Object {
          "WebkitFontSmoothing": "antialiased",
          "backgroundColor": "#fff",
          "border": "1px solid #eee",
          "borderRadius": "2px",
          "color": "#444",
          "fontFamily": "-apple-system, \\".SFNSText-Regular\\", \\"San Francisco\\", BlinkMacSystemFont, \\"Segoe UI\\", \\"Roboto\\", \\"Oxygen\\", \\"Ubuntu\\", \\"Cantarell\\", \\"Fira Sans\\", \\"Droid Sans\\", \\"Helvetica Neue\\", \\"Lucida Grande\\", \\"Arial\\", sans-serif",
          "fontSize": "15px",
          "fontWeight": 300,
          "lineHeight": 1.45,
          "marginBottom": "20px",
          "marginTop": "20px",
          "padding": "20px 40px 40px",
        }
      }
    >
      <div
        style={
          Object {
            "marginBottom": 0,
          }
        }
      >
        <div
          style={
            Object {
              "WebkitFontSmoothing": "antialiased",
              "color": "#444",
              "fontFamily": "-apple-system, \\".SFNSText-Regular\\", \\"San Francisco\\", BlinkMacSystemFont, \\"Segoe UI\\", \\"Roboto\\", \\"Oxygen\\", \\"Ubuntu\\", \\"Cantarell\\", \\"Fira Sans\\", \\"Droid Sans\\", \\"Helvetica Neue\\", \\"Lucida Grande\\", \\"Arial\\", sans-serif",
              "fontSize": "15px",
            }
          }
        >
          Search for “tes” to test
        </div>
      </div>
      <div>
        <h1
          style={
            Object {
              "borderBottom": "1px solid #EEE",
              "fontSize": "25px",
              "margin": "20px 0 0 0",
              "padding": "0 0 5px 0",
            }
          }
        >
          Prop Types
        </h1>
        <div>
          <h2
            style={
              Object {
                "margin": "20px 0 0 0",
              }
            }
          >
            "
            ProfileListSearch
            " Component
          </h2>
          <table>
            <thead>
              <tr>
                <th
                  style={
                    Object {
                      "textAlign": "left",
                      "verticalAlign": "top",
                    }
                  }
                >
                  property
                </th>
                <th
                  style={
                    Object {
                      "textAlign": "left",
                      "verticalAlign": "top",
                    }
                  }
                >
                  propType
                </th>
                <th
                  style={
                    Object {
                      "textAlign": "left",
                      "verticalAlign": "top",
                    }
                  }
                >
                  required
                </th>
                <th
                  style={
                    Object {
                      "textAlign": "left",
                      "verticalAlign": "top",
                    }
                  }
                >
                  default
                </th>
                <th
                  style={
                    Object {
                      "textAlign": "left",
                      "verticalAlign": "top",
                    }
                  }
                >
                  description
                </th>
              </tr>
            </thead>
            <tbody>
              <tr>
                <td
                  style={
                    Object {
                      "paddingRight": 10,
                      "verticalAlign": "top",
                    }
                  }
                >
                  onChange
                </td>
                <td
                  style={
                    Object {
                      "paddingRight": 10,
                      "verticalAlign": "top",
                    }
                  }
                >
                  <span />
                </td>
                <td
                  style={
                    Object {
                      "paddingRight": 10,
                      "verticalAlign": "top",
                    }
                  }
                >
                  -
                </td>
                <td
                  style={
                    Object {
                      "paddingRight": 10,
                      "verticalAlign": "top",
                    }
                  }
                >
                  <span
                    style={
                      Object {
                        "color": "#170",
                      }
                    }
                  >
                    onChange
                  </span>
                </td>
                <td
                  style={
                    Object {
                      "paddingRight": 10,
                      "verticalAlign": "top",
                    }
                  }
                />
              </tr>
              <tr>
                <td
                  style={
                    Object {
                      "paddingRight": 10,
                      "verticalAlign": "top",
                    }
                  }
                >
                  initialSearch
                </td>
                <td
                  style={
                    Object {
                      "paddingRight": 10,
                      "verticalAlign": "top",
                    }
                  }
                >
                  <span />
                </td>
                <td
                  style={
                    Object {
                      "paddingRight": 10,
                      "verticalAlign": "top",
                    }
                  }
                >
                  -
                </td>
                <td
                  style={
                    Object {
                      "paddingRight": 10,
                      "verticalAlign": "top",
                    }
                  }
                >
                  <span
                    style={
                      Object {
                        "color": "#22a",
                        "wordBreak": "break-word",
                      }
                    }
                  >
                    
                  </span>
                </td>
                <td
                  style={
                    Object {
                      "paddingRight": 10,
                      "verticalAlign": "top",
                    }
                  }
                />
              </tr>
            </tbody>
          </table>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`FileProperties components/core/ProfileListSearch With onChange 1`] = `
<div>
  <div>
    <div
      style={
        Object {
          "WebkitFontSmoothing": "antialiased",
          "backgroundColor": "#fff",
          "border": "1px solid #eee",
          "borderRadius": "2px",
          "color": "#444",
          "fontFamily": "-apple-system, \\".SFNSText-Regular\\", \\"San Francisco\\", BlinkMacSystemFont, \\"Segoe UI\\", \\"Roboto\\", \\"Oxygen\\", \\"Ubuntu\\", \\"Cantarell\\", \\"Fira Sans\\", \\"Droid Sans\\", \\"Helvetica Neue\\", \\"Lucida Grande\\", \\"Arial\\", sans-serif",
          "fontSize": "15px",
          "fontWeight": 300,
          "lineHeight": 1.45,
          "marginBottom": "20px",
          "marginTop": "20px",
          "padding": "20px 40px 40px",
        }
      }
    >
      <div
        style={
          Object {
            "borderBottom": "1px solid #eee",
            "marginBottom": 10,
            "paddingTop": 10,
          }
        }
      >
        <h1
          style={
            Object {
              "fontSize": "35px",
              "margin": 0,
              "padding": 0,
            }
          }
        >
          components/core/ProfileListSearch
        </h1>
        <h2
          style={
            Object {
              "fontSize": "22px",
              "fontWeight": 400,
              "margin": "0 0 10px 0",
              "padding": 0,
            }
          }
        >
          With onChange
        </h2>
      </div>
    </div>
  </div>
  <div
    id="story-root"
    style={Object {}}
  >
    <div>
      <div
        className="input-group"
      >
        <input
          className="form-control"
          onChange={[Function]}
          placeholder="en_CA: Search for a new supervisor"
          type="text"
          value="tes"
        />
        <div
          className="input-group-append"
        >
          <span
            className="input-group-text"
          >
            SearchIcon
          </span>
        </div>
      </div>
      <ul
        className="list-group"
      >
        <div
          className="spinner-border text-primary"
          role="status"
        >
          <span
            className="sr-only"
          >
            Loading...
          </span>
        </div>
      </ul>
    </div>
  </div>
  <div>
    <div
      style={
        Object {
          "WebkitFontSmoothing": "antialiased",
          "backgroundColor": "#fff",
          "border": "1px solid #eee",
          "borderRadius": "2px",
          "color": "#444",
          "fontFamily": "-apple-system, \\".SFNSText-Regular\\", \\"San Francisco\\", BlinkMacSystemFont, \\"Segoe UI\\", \\"Roboto\\", \\"Oxygen\\", \\"Ubuntu\\", \\"Cantarell\\", \\"Fira Sans\\", \\"Droid Sans\\", \\"Helvetica Neue\\", \\"Lucida Grande\\", \\"Arial\\", sans-serif",
          "fontSize": "15px",
          "fontWeight": 300,
          "lineHeight": 1.45,
          "marginBottom": "20px",
          "marginTop": "20px",
          "padding": "20px 40px 40px",
        }
      }
    >
      <div
        style={
          Object {
            "marginBottom": 0,
          }
        }
      >
        <div
          style={
            Object {
              "WebkitFontSmoothing": "antialiased",
              "color": "#444",
              "fontFamily": "-apple-system, \\".SFNSText-Regular\\", \\"San Francisco\\", BlinkMacSystemFont, \\"Segoe UI\\", \\"Roboto\\", \\"Oxygen\\", \\"Ubuntu\\", \\"Cantarell\\", \\"Fira Sans\\", \\"Droid Sans\\", \\"Helvetica Neue\\", \\"Lucida Grande\\", \\"Arial\\", sans-serif",
              "fontSize": "15px",
            }
          }
        >
          Search for “tes” to test
        </div>
      </div>
      <div>
        <h1
          style={
            Object {
              "borderBottom": "1px solid #EEE",
              "fontSize": "25px",
              "margin": "20px 0 0 0",
              "padding": "0 0 5px 0",
            }
          }
        >
          Prop Types
        </h1>
        <div>
          <h2
            style={
              Object {
                "margin": "20px 0 0 0",
              }
            }
          >
            "
            ProfileListSearch
            " Component
          </h2>
          <table>
            <thead>
              <tr>
                <th
                  style={
                    Object {
                      "textAlign": "left",
                      "verticalAlign": "top",
                    }
                  }
                >
                  property
                </th>
                <th
                  style={
                    Object {
                      "textAlign": "left",
                      "verticalAlign": "top",
                    }
                  }
                >
                  propType
                </th>
                <th
                  style={
                    Object {
                      "textAlign": "left",
                      "verticalAlign": "top",
                    }
                  }
                >
                  required
                </th>
                <th
                  style={
                    Object {
                      "textAlign": "left",
                      "verticalAlign": "top",
                    }
                  }
                >
                  default
                </th>
                <th
                  style={
                    Object {
                      "textAlign": "left",
                      "verticalAlign": "top",
                    }
                  }
                >
                  description
                </th>
              </tr>
            </thead>
            <tbody>
              <tr>
                <td
                  style={
                    Object {
                      "paddingRight": 10,
                      "verticalAlign": "top",
                    }
                  }
                >
                  onChange
                </td>
                <td
                  style={
                    Object {
                      "paddingRight": 10,
                      "verticalAlign": "top",
                    }
                  }
                >
                  <span />
                </td>
                <td
                  style={
                    Object {
                      "paddingRight": 10,
                      "verticalAlign": "top",
                    }
                  }
                >
                  -
                </td>
                <td
                  style={
                    Object {
                      "paddingRight": 10,
                      "verticalAlign": "top",
                    }
                  }
                >
                  <span
                    style={
                      Object {
                        "color": "#170",
                      }
                    }
                  >
                    onChange
                  </span>
                </td>
                <td
                  style={
                    Object {
                      "paddingRight": 10,
                      "verticalAlign": "top",
                    }
                  }
                />
              </tr>
              <tr>
                <td
                  style={
                    Object {
                      "paddingRight": 10,
                      "verticalAlign": "top",
                    }
                  }
                >
                  initialSearch
                </td>
                <td
                  style={
                    Object {
                      "paddingRight": 10,
                      "verticalAlign": "top",
                    }
                  }
                >
                  <span />
                </td>
                <td
                  style={
                    Object {
                      "paddingRight": 10,
                      "verticalAlign": "top",
                    }
                  }
                >
                  -
                </td>
                <td
                  style={
                    Object {
                      "paddingRight": 10,
                      "verticalAlign": "top",
                    }
                  }
                >
                  <span
                    style={
                      Object {
                        "color": "#22a",
                        "wordBreak": "break-word",
                      }
                    }
                  >
                    
                  </span>
                </td>
                <td
                  style={
                    Object {
                      "paddingRight": 10,
                      "verticalAlign": "top",
                    }
                  }
                />
              </tr>
            </tbody>
          </table>
        </div>
      </div>
    </div>
  </div>
</div>
`;
